k8s/apps/media/unmanic/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unmanic-ingress
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unmanic.media.armleth.fr`) && PathPrefix(`/outpost.goauthentik.io/`)
      kind: Rule
      priority: 15
      services:
        - name: authentik-server
          namespace: authentik
          port: 80
    - match: Host(`unmanic.media.armleth.fr`)
      kind: Rule
      priority: 10
      services:
        - name: unmanic-service
          port: 8888
      middlewares:
        - name: authentik-forward-auth
          namespace: authentik
  tls:
    secretName: unmanic-tls-secret
